Add legacy PayPal route
https://phabricator.wikimedia.org/T284089
Some older PayPal IPNs still come in on this route
so we handle them with the same controller

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -158,6 +158,11 @@ handle_paypal_payment_notification:
     methods: [POST]
     controller: 'WMDE\Fundraising\Frontend\App\Controllers\Payment\PaypalNotificationController::index'
 
+handle_legacy_paypal_payment_notification:
+    path: /spenden/paypal_handler.php
+    methods: [ POST ]
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\Payment\PaypalNotificationController::index'
+
 sofort_payment_notification:
     path: /sofort-payment-notification
     methods: [POST]
