Add 404 redirect for legacy POSTs
https://phabricator.wikimedia.org/T284089
Redirect unhandled legacy POSTs to a 404 page to make
services using them aware that route no longer exists

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -204,6 +204,12 @@ legacy_routes.php:
         route: index
         permanent: true
 
+legacy_route_posts.php:
+    path: '/spenden{wildcard}'
+    methods: [POST]
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\PageNotFoundController::index'
+    requirements: { wildcard: .* }
+
 purge_cache:
     path: /purge-cache
     methods: [GET]
