--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
 		"symfony/twig-bridge": "~5.2.0",
 		"symfony/validator": "~5.2.0",
 		"symfony/yaml": "~5.3.2",
+		"symfony/cache": "^5.3",
 
 		"airbrake/phpbrake": "~0.7",
 		"doctrine/migrations": "~3.0",
@@ -46,6 +47,7 @@
 		"monolog/monolog": "~2.1",
 		"nikic/php-parser": "~4.0",
 		"psr/log": "~1.0",
+		"psr/simple-cache": "~1.0",
 		"remotelyliving/doorkeeper": "^1.4",
 		"swiftmailer/swiftmailer": "~6.2"
 	},
