--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"homepage": "https://github.com/wmde/FundraisingFrontend",
 	"license": "GPL-2.0+",
 	"require": {
-		"php": ">=7.4",
+		"php": ">=8.0",
 		"ext-intl": "*",
 		"ext-curl": "*",
 		"ext-json": "*",
@@ -24,6 +24,7 @@
 		"wmde/freezable-value-object": "~2.0",
 		"wmde/fun-validators": "~3.0.0",
 
+		"symfony/asset": "~5.3",
 		"symfony/config": "~5.3.0",
 		"symfony/console": "~5.2.0",
 		"symfony/dotenv": "~5.3.0",
