Hook up new Payments API
Ticket: https://phabricator.wikimedia.org/T285923

--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "dev-update-payments",
-		"wmde/fundraising-memberships": "dev-update-payments",
+		"wmde/fundraising-donations": "v8.0",
+		"wmde/fundraising-memberships": "v6.0",
 		"wmde/fundraising-payments": "~4.0",
-		"wmde/fundraising-subscriptions": "dev-update-validators",
+		"wmde/fundraising-subscriptions": "v3.0",
 		"wmde/fundraising-content-provider": "~4.0.0",
 		"wmde/fundraising-address-change": "1.0.2",
 		"wmde/freezable-value-object": "~2.0",
