Localise numbers in emails
This adds Symfony and Twig intl classes to
allow locale based currency formatting in mail

Ticket: https://phabricator.wikimedia.org/T284918

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 		"ext-sodium": "*",
 
 		"twig/twig": "^3.0",
+		"twig/intl-extra": "^3.3",
 
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
