Create AB test for banner
- creates encryption_hint campaign that toggles the encryption hint in
the forms visible or invisible

https://phabricator.wikimedia.org/T286446

--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -14,3 +14,8 @@ campaigns:
     active: true
     start: "2021-02-10"
     default_bucket: "new_layout"
+
+  encryption_hint:
+    active: true
+    start: "2021-07-15"
+    default_bucket: "visible"
