Create AB test for addresstype
- A/B test for testing chosing the addresstype directly vs 2-step+email

https://phabricator.wikimedia.org/T289460

--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -19,3 +19,8 @@ campaigns:
     active: true
     start: "2021-07-15"
     default_bucket: "visible"
+
+  address_type_steps:
+    active: true
+    start: "2021-09-01"
+    default_bucket: "direct"
