--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -73,3 +73,16 @@ campaigns:
       url_key: enh
       active: true
       param_only: true
+
+    address_type_steps:
+      description: Test choosing address type directly (person, company, anonymous) or via 2 step (full, email, anonymous)
+      reference: "https://phabricator.wikimedia.org/T289460"
+      start: "2021-12-31"
+      end: "2021-12-31"
+      buckets:
+        - "direct"
+        - "multistep"
+      default_bucket: "direct"
+      url_key: ast
+      active: true
+      param_only: true
