Add matomo goal ids to config
We use different site and goal ids in test
and production so this adds them to the
environment configuration.

Ticket: https://phabricator.wikimedia.org/T290561

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -93,6 +93,8 @@
 	"piwik": {
 		"baseUrl": "//tracking.wikimedia.de/",
 		"siteId": 5,
+		"donationConfirmationGoalId": 1,
+		"membershipApplicationConfirmationGoalId": 2,
 		"siteUrlBase": ""
 	},
 	"payment-types": {
