Add locale setting through URL parameter
We need to allow locale to be set from banners
so allow it to come from a url if the cookie
doesn't already exist.

Ticket: https://phabricator.wikimedia.org/T292735

--- a/composer.json
+++ b/composer.json
@@ -133,7 +133,7 @@
 
 		"wmde/psr-log-test-doubles": "~2.1",
 		"wmde/fundraising-phpcs": "~4.0",
-		"wmde/fundraising-frontend-content": "dev-test",
+		"wmde/fundraising-frontend-content": "dev-english",
 
 		"symfony/css-selector": "^5.2",
 		"symfony/browser-kit": "^5.2"
