--- a/app/config/archived_campaigns.yaml
+++ b/app/config/archived_campaigns.yaml
@@ -106,3 +106,16 @@ compact_design:
   url_key: compact
   active: true
   param_only: true
+
+encryption_hint:
+    description: Testing users seeing/not seeing the hint about encrypted connection when they submit a form.
+    reference: "https://phabricator.wikimedia.org/T286446"
+    start: "2021-08-02"
+    end: "2021-08-20"
+    buckets:
+      - "visible"
+      - "not_visible"
+    default_bucket: "visible"
+    url_key: enh
+    active: true
+    param_only: true
