Add configuration for C21_WMDE_Test_12
This test hides the cookie banner for
some users. In order to do this we need
to force the storage of the AB test
cookies for them.

Ticket: https://phabricator.wikimedia.org/T295869

--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -19,3 +19,8 @@ campaigns:
     active: true
     start: "2021-09-01"
     default_bucket: "direct"
+
+  optional_cookie_notice:
+    active: true
+    start: "2021-01-01"
+    default_bucket: "show"
