Add address option for C21_WMDE_Test_15
Ticket: https://phabricator.wikimedia.org/T296390

--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -70,6 +70,7 @@ campaigns:
         - "direct"
         - "multistep"
         - "multistep_var"
+        - "multistep_checkmarks"
       default_bucket: "direct"
       url_key: ast
       active: true
