Add Symfony cache warmer
This adds some code for Twig to warm up
the template cache from a command

Ticket: https://phabricator.wikimedia.org/T295617

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -89,6 +89,11 @@ services:
         class: WMDE\Fundraising\Frontend\Infrastructure\CookieBuilder
         factory: ['@WMDE\Fundraising\Frontend\Factories\FunFunFactory', 'getCookieBuilder']
 
+    WMDE\Fundraising\Frontend\Infrastructure\SkinCacheWarmer:
+        class: WMDE\Fundraising\Frontend\Infrastructure\SkinCacheWarmer
+        tags:
+            - { name: kernel.cache_warmer }
+
     app.errbit_logger:
         class: Airbrake\MonologHandler
         factory: ['WMDE\Fundraising\Frontend\Factories\ErrbitLoggerFactory', 'createErrbitHandler']
