--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
 		"nikic/php-parser": "~4.0",
 		"psr/log": "~1.0",
 		"psr/simple-cache": "~1.0",
-		"remotelyliving/doorkeeper": "^1.4"
+		"remotelyliving/doorkeeper": "^1.4",
+		"api-platform/core": "^2.6"
 	},
 	"repositories": [
 		{
