Add A/B test campaign for C21_WMDE_Test_22
Add another campaign entry for hiding the anon option.

We can't do different campaigns since our plugin on the frontend does
not allow nesting.

--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -58,6 +58,7 @@ campaigns:
         - "multistep"
         - "multistep_var"
         - "multistep_checkmarks"
+        - "require_address"
       default_bucket: "direct"
       url_key: ast
       active: true
