--- a/composer.json
+++ b/composer.json
@@ -25,21 +25,20 @@
 		"wmde/freezable-value-object": "~2.0",
 		"wmde/fun-validators": "~4.0.0",
 
-		"symfony/asset": "~5.3",
-		"symfony/config": "~5.3.0",
-		"symfony/console": "~5.2.0",
-		"symfony/dotenv": "~5.3.0",
-		"symfony/filesystem": "~5.2.0",
-		"symfony/framework-bundle": "~5.3.2",
-		"symfony/http-foundation": "~5.3.2",
-		"symfony/mailer": "~5.3.2",
+		"symfony/asset": "~5.4",
+		"symfony/config": "~5.4.0",
+		"symfony/console": "~5.4.0",
+		"symfony/dotenv": "~5.4.0",
+		"symfony/filesystem": "~5.4.0",
+		"symfony/framework-bundle": "~5.4.0",
+		"symfony/http-foundation": "~5.4.0",
+		"symfony/mailer": "~5.4.0",
 		"symfony/monolog-bundle": "^3.6",
-		"symfony/property-access": "~5.3.0",
-		"symfony/stopwatch": "~5.2.0",
-		"symfony/twig-bridge": "~5.3.3",
-		"symfony/validator": "~5.2.0",
-		"symfony/yaml": "~5.3.2",
-		"symfony/cache": "^5.3",
+		"symfony/property-access": "~5.4.0",
+		"symfony/twig-bridge": "~5.4.0",
+		"symfony/validator": "~5.4.0",
+		"symfony/yaml": "~5.4.0",
+		"symfony/cache": "^5.4",
 
 		"airbrake/phpbrake": "~0.7",
 		"doctrine/migrations": "~3.0",
@@ -135,8 +134,8 @@
 		"wmde/fundraising-phpcs": "~5.0",
 		"wmde/fundraising-frontend-content": "dev-test",
 
-		"symfony/css-selector": "^5.2",
-		"symfony/browser-kit": "^5.2"
+		"symfony/css-selector": "^5.4",
+		"symfony/browser-kit": "^5.4"
 	},
 	"autoload": {
 		"psr-4": {
@@ -153,6 +152,9 @@
 		}
 	},
 	"config": {
-		"discard-changes": true
+		"discard-changes": true,
+		"allow-plugins": {
+			"composer/package-versions-deprecated": true
+		}
 	}
 }
