Fix PHPStan errors
The new PHPStan version found more errors. This commit fixes them:

Added comments for IDs autogenerated by Doctrine.
We should abandon bad practice when we tackle the DB refactoring
(https://phabricator.wikimedia.org/T203679)

Moved state into local variable in presenters. This makes the code
more readable and memory-efficient. This was not a PHPStan error but
bubbled up while reading the code.

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -16,6 +16,6 @@ parameters:
 			path: src/BucketTesting/Validation/FeatureToggleParser.php
 
 		-
-			message: "#^Parameter \\#1 \\$level of static method Monolog\\\\Logger\\:\\:toMonologLevel\\(\\) expects 100\\|200\\|250\\|300\\|400\\|500\\|550\\|600\\|non\\-empty\\-string, string given\\.$#"
+			message: "#^Parameter \\#1 \\$level of static method Monolog\\\\Logger\\:\\:toMonologLevel\\(\\) expects 100\\|200\\|250\\|300\\|400\\|500\\|550\\|600\\|'ALERT'\\|'alert'\\|'CRITICAL'\\|'critical'\\|'DEBUG'\\|'debug'\\|'EMERGENCY'\\|'emergency'\\|'ERROR'\\|'error'\\|'INFO'\\|'info'\\|'NOTICE'\\|'notice'\\|'WARNING'\\|'warning', string given\\.$#"
 			count: 1
 			path: src/Factories/ErrbitLoggerFactory.php
