--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
 		"nikic/php-parser": "~4.0",
 		"psr/log": "~1.0",
 		"psr/simple-cache": "~1.0",
-		"remotelyliving/doorkeeper": "^1.4"
+		"remotelyliving/doorkeeper": "dev-php-8"
 	},
 	"repositories": [
 		{
@@ -112,6 +112,11 @@
 		{
 			"type": "vcs",
 			"url": "https://github.com/wmde/fun-validators",
+			"no-api": true
+		},
+		{
+			"type": "vcs",
+			"url": "https://github.com/wmde/doorkeeper",
 			"no-api": true
 		},
 		{
