Mount content resources in proxy container
The NGinX reverse proxy now serves the `resources` directory from the
fundraising-frontend-content repository, bringing the dev environment
closer to the experience on the server.

Note, that the server does NOT use the fundraising-frontend-content as a
composer dev dependency but via a separate installation process with a
deployment system (drone.io at the time of this commit.)

This is for https://phabricator.wikimedia.org/T296282

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./build/proxy/nginx.conf.template:/etc/nginx/conf.d/nginx.conf.template:ro
       - ./build/proxy/includes:/etc/nginx/conf.d/includes:ro
       - ./web:/usr/share/nginx/www/spenden.wikimedia.de/current/web:ro
+      - ./vendor/wmde/fundraising-frontend-content:/usr/share/nginx/www/fundraising-frontend-content:ro
     environment:
       - NGINX_HOST=spenden.wikimedia.de
       - NGINX_PORT=8080
