--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "~10.0",
-		"wmde/fundraising-memberships": "~8.0",
-		"wmde/fundraising-payments": "~4.0",
+		"wmde/fundraising-donations": "dev-new-payment-domain",
+		"wmde/fundraising-memberships": "dev-update-payments",
+		"wmde/fundraising-payments": "~5.0",
 		"wmde/fundraising-subscriptions": "~3.1",
 		"wmde/fundraising-content-provider": "~5.1",
 		"wmde/fundraising-address-change": "~1.3.0",
@@ -48,7 +48,7 @@
 		"micropayment-de/service-client": "~1.25",
 		"monolog/monolog": "~2.1",
 		"nikic/php-parser": "~4.0",
-		"psr/log": "~2.0|~3.0",
+		"psr/log": "~3.0",
 		"psr/simple-cache": "~1.0",
 		"remotelyliving/doorkeeper": "dev-php-8"
 	},
