--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"homepage": "https://github.com/wmde/FundraisingFrontend",
 	"license": "GPL-2.0+",
 	"require": {
-		"php": ">=8.0",
+		"php": ">=8.1",
 		"ext-intl": "*",
 		"ext-curl": "*",
 		"ext-json": "*",
@@ -17,7 +17,7 @@
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
 		"wmde/fundraising-donations": "~9.1",
-		"wmde/fundraising-memberships": "~7.0",
+		"wmde/fundraising-memberships": "dev-main",
 		"wmde/fundraising-payments": "~4.0",
 		"wmde/fundraising-subscriptions": "~3.1",
 		"wmde/fundraising-content-provider": "~5.1",
