--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "~9.1",
+		"wmde/fundraising-donations": "dev-store-moderation-reasons",
 		"wmde/fundraising-memberships": "dev-main",
 		"wmde/fundraising-payments": "~4.0",
 		"wmde/fundraising-subscriptions": "~3.1",
