--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "dev-store-moderation-reasons",
-		"wmde/fundraising-memberships": "dev-main",
+		"wmde/fundraising-donations": "~10.0",
+		"wmde/fundraising-memberships": "~8.0",
 		"wmde/fundraising-payments": "~4.0",
 		"wmde/fundraising-subscriptions": "~3.1",
 		"wmde/fundraising-content-provider": "~5.1",
