--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "dev-new-payment-domain",
-		"wmde/fundraising-memberships": "dev-update-payments",
+		"wmde/fundraising-donations": "~11.0",
+		"wmde/fundraising-memberships": "~9.0",
 		"wmde/fundraising-payments": "~5.0",
 		"wmde/fundraising-subscriptions": "~3.1",
 		"wmde/fundraising-content-provider": "~5.1",
