--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "~11.0",
+		"wmde/fundraising-donations": "dev-special-booking-failure-message",
 		"wmde/fundraising-memberships": "~10.0",
 		"wmde/fundraising-payments": "~5.0",
 		"wmde/fundraising-subscriptions": "~3.1",
