--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -31,6 +31,7 @@ campaigns:
       buckets:
         - "direct"
         - "preselect"
+        - "full_or_email"
       default_bucket: "direct"
       url_key: ast
       active: true
