--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,25 +1,21 @@
 <?xml version="1.0"?>
-<phpunit 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
-	backupGlobals="false"
-	backupStaticAttributes="false"
-	bootstrap="tests/bootstrap.php"
-	colors="true"
-	convertErrorsToExceptions="true"
-	convertNoticesToExceptions="false"
-	convertWarningsToExceptions="true"
-	stopOnError="false"
-	stopOnFailure="false"
-	stopOnIncomplete="false"
-	stopOnSkipped="false"
-	verbose="false"
-	>
-    <php>
-        <server name="APP_ENV" value="test" force="true" />
-        <env name="APP_ENV" value="test" force="true" />
-    </php>
-  <coverage processUncoveredFiles="true">
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.0/phpunit.xsd"
+    backupGlobals="false"
+    bootstrap="tests/bootstrap.php"
+    colors="true"
+    stopOnError="false"
+    stopOnFailure="false"
+    stopOnIncomplete="false"
+    stopOnSkipped="false"
+    cacheDirectory=".phpunit.cache"
+    backupStaticProperties="false"
+    >
+  <php>
+    <server name="APP_ENV" value="test" force="true"/>
+    <env name="APP_ENV" value="test" force="true"/>
+  </php>
+  <coverage>
     <include>
       <directory suffix=".php">src</directory>
       <directory suffix=".php">app</directory>
