Extend end date of address type A/B test
Extend end date, but only in the dev/uat environment, for usability
testing.

This is for https://phabricator.wikimedia.org/T337455

--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -4,6 +4,7 @@ campaigns:
   address_type_steps:
     active: true
     start: "2022-11-01"
+    end: "2023-12-31"
     default_bucket: "direct"
 
   membership_intervals:
