--- a/composer.json
+++ b/composer.json
@@ -111,7 +111,7 @@
 	"require-dev": {
 		"ext-pdo_sqlite": "*",
 
-		"matthiasnoback/symfony-config-test": "dev-phpunit-10",
+		"matthiasnoback/symfony-config-test": "~4.3.0",
 		"mikey179/vfsstream": "~1.6",
 		"phpmd/phpmd": "~2.10",
 		"phpstan/phpstan": "^1.8",
