--- a/composer.json
+++ b/composer.json
@@ -119,7 +119,7 @@
 
 		"wmde/psr-log-test-doubles": "~3.0",
 		"wmde/fundraising-phpcs": "~8.0",
-		"wmde/fundraising-frontend-content": "dev-test",
+		"wmde/fundraising-frontend-content": "dev-remove-wmfg",
 
 		"symfony/css-selector": "^6.0",
 		"symfony/browser-kit": "^6.0"
