--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,6 @@ APP_SECRET='$ecretf0rt3st'
 APP_DEBUG=0
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
+PAYPAL_API_CLIENT_ID=test_paypal_client_id
+PAYPAL_API_CLIENT_SECRET=test_paypal_client_secret
+PAYPAL_API_URL=https://example.com
