Integrate Commands from payment BC
Add services to Symfony configuration so its dependency injection
framework can find the commands for creating and listing subscription
plans in the payment bounded context.

Loading the credentials from the `.env` files is done automatically in
`bin/console`, so the credentials will exist when the environ-specific
factory needs them.

https://phabricator.wikimedia.org/T341568

Co-Authored-By: Corinna Hillebrand <corinna.hillebrand@wikimedia.de>
Co-Authored-By: Sperling-0 <tanuja.doriya@wikimedia.de>

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,6 +30,9 @@ services:
     WMDE\Fundraising\Frontend\Cli\:
         resource: '../cli/*'
 
+    WMDE\Fundraising\PaymentContext\Commands\:
+        resource: '../vendor/wmde/fundraising-payments/src/Commands/*'
+
     # In the future, me might get less and less reliant on FunFunFactory and make
     #    classes in src/ available to be used as services
     # The following configuration creates a service per class whose id is the fully-qualified class name
@@ -109,3 +112,10 @@ services:
             - "%env(resolve:APP_ENV)%"
             # We can't define the log level in the monolog configuration, see https://github.com/symfony/monolog-bundle/issues/322
             - notice
+
+    WMDE\Fundraising\PaymentContext\Services\PayPal\GuzzlePaypalAPI:
+        class: WMDE\Fundraising\PaymentContext\Services\PayPal\GuzzlePaypalAPI
+        factory: ['@WMDE\Fundraising\Frontend\Factories\FunFunFactory', 'getPayPalApiClient']
+
+    WMDE\Fundraising\PaymentContext\Services\PayPal\PaypalAPI: '@WMDE\Fundraising\PaymentContext\Services\PayPal\GuzzlePaypalAPI'
+
