Update email configuration
Emails used to be sent by either the organisation
or sub-organisation. Now that the sub-organisation
is gone the senders can be split to make the sender
details for each type of email the users receive
explicit.

Ticket: https://phabricator.wikimedia.org/T342843#9055444

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -22,11 +22,23 @@
 	},
 	"i18n-base-path": "",
 	"contact-info": {
-		"organization": {
+		"donation": {
 			"email": "",
 			"name": ""
 		},
-		"suborganization": {
+		"membership": {
+			"email": "",
+			"name": ""
+		},
+		"subscription": {
+			"email": "",
+			"name": ""
+		},
+		"contact": {
+			"email": "",
+			"name": ""
+		},
+		"admin": {
 			"email": "",
 			"name": ""
 		}
