--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -24,10 +24,10 @@ campaigns:
 
 
     address_type_steps:
-      description: Test Donating with address preselection, allowing for E-Mail only and anonymous
-      reference: "https://phabricator.wikimedia.org/T323931"
-      start: "2022-12-05"
-      end: "2022-12-31"
+      description: Test different kinds of address options, ask user whether they want receipt or just confirmation
+      reference: "https://phabricator.wikimedia.org/T342206"
+      start: "2023-08-10"
+      end: "2023-12-31"
       buckets:
         - "direct"
         - "preselect"
