--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "~14.1",
-		"wmde/fundraising-memberships": "~12.0",
-		"wmde/fundraising-payments": "~6.0",
+		"wmde/fundraising-donations": "dev-payment-with-ppl-api",
+		"wmde/fundraising-memberships": "dev-payment-with-ppl-api",
+		"wmde/fundraising-payments": "dev-url-generation-refactor",
 		"wmde/fundraising-subscriptions": "~4.1",
 		"wmde/fundraising-content-provider": "~6.0",
 		"wmde/fundraising-address-change": "~2.0",
