--- a/composer.json
+++ b/composer.json
@@ -114,7 +114,7 @@
 
 		"wmde/psr-log-test-doubles": "~3.0",
 		"wmde/fundraising-phpcs": "~8.0",
-		"wmde/fundraising-frontend-content": "dev-test",
+		"wmde/fundraising-frontend-content": "dev-i18n-update-changes",
 
 		"symfony/css-selector": "^6.0",
 		"symfony/browser-kit": "^6.0"
