--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -11,3 +11,8 @@ campaigns:
     start: "2023-01-05"
     default_bucket: "all_intervals"
     active: true
+
+  address_pages:
+    start: "2023-01-01"
+    default_bucket: "legacy"
+    active: true
