--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -16,3 +16,8 @@ campaigns:
     start: "2023-01-01"
     default_bucket: "legacy"
     active: true
+
+  new_design:
+    start: "2023-01-01"
+    default_bucket: "legacy"
+    active: true
