--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "dev-payment-with-ppl-api",
-		"wmde/fundraising-memberships": "dev-payment-with-ppl-api",
-		"wmde/fundraising-payments": "dev-payment-with-ppl-api",
+		"wmde/fundraising-donations": "~15.0",
+		"wmde/fundraising-memberships": "~13.0",
+		"wmde/fundraising-payments": "~7.0",
 		"wmde/fundraising-subscriptions": "~4.1",
 		"wmde/fundraising-content-provider": "~6.0",
 		"wmde/fundraising-address-change": "~2.0",
