Make the new design default
Ticket: https://phabricator.wikimedia.org/T349708

--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -71,7 +71,7 @@ campaigns:
       buckets:
         - "legacy"
         - "new"
-      default_bucket: "legacy"
+      default_bucket: "new"
       url_key: des
       active: true
       param_only: true
