Use docker compose 2.0
Change Travis file and Makefile to use `docker compose` instead of
`docker-compose` (the latter is a python script, the former is a Docker
subcommand).

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ language: php
 php:
     - 8.1
 
+dist: jammy
+
 services:
   - docker
 
 install:
   - travis_retry composer install # This is a crutch to use travis tokens for github API instead of needing our own
+  - docker --version
   # Commented out for efficiency reasons
   # - travis_retry make install-php
 
