--- a/composer.json
+++ b/composer.json
@@ -40,12 +40,12 @@
 		"symfony/yaml": "~6.3",
 		"symfony/cache": "^6.0",
 
-		"airbrake/phpbrake": "dev-main",
+		"airbrake/phpbrake": "dev-update-monolog",
 		"doctrine/migrations": "~3.0",
 		"guzzlehttp/guzzle": "^7.5",
 		"jeroen/file-fetcher": "~6.0",
 		"justinrainbow/json-schema": "^5.2",
-		"monolog/monolog": "~2.1",
+		"monolog/monolog": "^3.0",
 		"nikic/php-parser": "~4.0",
 		"psr/log": "~3.0",
 		"psr/simple-cache": "~1.0",
