Set required PHP platform to 8.1
Our server still runs PHP 8.1, but our dev environment already has PHP
8.3. To avoid Symfony 7 dependencies (which have a minimum requirement
of PHP 8.2), we set the `platform` in `composer.json`. This section
must be removed when we have updated to PHP 8.3!

Ran `make update-php` to make the dependencies 8.1 compatible while
still getting the newest versions for Doctrine etc.

--- a/composer.json
+++ b/composer.json
@@ -142,6 +142,9 @@
 		"discard-changes": true,
 		"allow-plugins": {
 			"composer/package-versions-deprecated": true
+		},
+		"platform": {
+			"php": "8.1"
 		}
 	}
 }
