Update Doctrine ORM and DBAL
- Use AddressType enum

Ticket: https://phabricator.wikimedia.org/T356744

--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "~16.0",
-		"wmde/fundraising-memberships": "~13.3",
+		"wmde/fundraising-donations": "~17.0",
+		"wmde/fundraising-memberships": "~14.0",
 		"wmde/fundraising-payments": "~7.0",
-		"wmde/fundraising-subscriptions": "~4.1",
+		"wmde/fundraising-subscriptions": "~5.0",
 		"wmde/fundraising-content-provider": "~6.0",
-		"wmde/fundraising-address-change": "~2.0",
+		"wmde/fundraising-address-change": "~3.0",
 		"wmde/freezable-value-object": "~2.0",
 		"wmde/fun-validators": "~4.1",
 
@@ -42,6 +42,8 @@
 
 		"airbrake/phpbrake": "dev-update-monolog",
 		"doctrine/migrations": "~3.0",
+		"doctrine/orm": "~3.0",
+		"doctrine/dbal": "~4.0",
 		"guzzlehttp/guzzle": "^7.5",
 		"jeroen/file-fetcher": "~6.0",
 		"justinrainbow/json-schema": "^5.2",
