--- a/composer.json
+++ b/composer.json
@@ -118,6 +118,8 @@
 		"phpmd/phpmd": "~2.10",
 		"phpstan/phpstan": "^1.8",
 		"phpunit/phpunit": "~10.4.1",
+		"phpstan/phpstan-phpunit": "^1.3",
+		"phpstan/phpstan-doctrine": "~1.3.62",
 
 		"wmde/psr-log-test-doubles": "~3.0",
 		"wmde/fundraising-phpcs": "~9.0",
