--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,7 @@
     stopOnSkipped="false"
     cacheDirectory=".phpunit.cache"
     backupStaticProperties="false"
+    requireCoverageMetadata="true" 
 >
   <php>
     <server name="APP_ENV" value="test" force="true"/>
