Take care of potential `null` values
- This work is a part of an upgrade to phpstan level 9

Ticket: https://phabricator.wikimedia.org/T359803

Co-authored-by: Gabriel Birke <gabriel.birke@wikimedia.de>

--- a/phpstan-baseline-level-9.neon
+++ b/phpstan-baseline-level-9.neon
@@ -26,6 +26,11 @@ parameters:
 			path: tests/EdgeToEdge/WebRouteTestCase.php
 
 		-
+			message: "#^Method WMDE\\\\Fundraising\\\\Frontend\\\\Tests\\\\EdgeToEdge\\\\WebRouteTestCase\\:\\:createClient\\(\\) should return Symfony\\\\Component\\\\BrowserKit\\\\AbstractBrowser but returns Symfony\\\\Component\\\\BrowserKit\\\\AbstractBrowser\\|null\\.$#"
+			count: 1
+			path: tests/EdgeToEdge/WebRouteTestCase.php
+
+		-
 			message: "#^Method WMDE\\\\Fundraising\\\\Frontend\\\\Tests\\\\Unit\\\\Infrastructure\\\\ConfigReaderTest\\:\\:getDistConfigContents\\(\\) should return string but returns string\\|false\\.$#"
 			count: 1
 			path: tests/Unit/Infrastructure/ConfigReaderTest.php
