--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
 		"wmde/fundraising-donations": "~17.0",
-		"wmde/fundraising-memberships": "~14.0",
+		"wmde/fundraising-memberships": "dev-upgrade-phpstan-level",
 		"wmde/fundraising-payments": "~7.0",
 		"wmde/fundraising-subscriptions": "~5.0",
 		"wmde/fundraising-content-provider": "~6.0",
