Prepare for stricter phpstan rules
- Add addition Makefile task for local development, using phpstan level-9
- This work is a part of an upgrade to phpstan level 9

Ticket: https://phabricator.wikimedia.org/T359803

Co-authored-by: Gabriel Birke <gabriel.birke@wikimedia.de>

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ tmp/
 /.docker/database/*
 !/.docker/database/01.Database_Schema.sql
 !/.docker/database/02.Default_Data.sql
+
+# This is a file with lots of errors that we could copy 'ignore' rules from
+phpstan-baseline-source.neon
