Group patch updates from dependabot in 1 PR

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,7 @@ updates:
       - "wmde/funtech-core"
     # Turn off dependabot until we move CI from Travis to Drone
     open-pull-requests-limit: 0
+    groups:
+      patch-updates:
+        update-types:
+          - patch
