Check if address update is done
Create two new success routes for address change. They both show the
same template, but with different messages.

The `ShowUpdateAddressController` now redirects to the route
`address-update-already-updated` when it detects an address update token
that's already been used.

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -103,6 +103,20 @@ update-address:
     methods: [POST]
     controller: 'WMDE\Fundraising\Frontend\App\Controllers\AddressChange\UpdateAddressController::index'
 
+update-address-success:
+    path: /update-address/success
+    methods: [GET]
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\AddressChange\ShowAddressChangeSuccessController::index'
+    defaults:
+        successMessage: 'success'
+
+update-address-already-updated:
+    path: /update-address/success-already-updated
+    methods: [GET]
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\AddressChange\ShowAddressChangeSuccessController::index'
+    defaults:
+        successMessage: 'already-updated'
+
 use-of-funds:
     path: /use-of-funds
     methods: [GET]
