Add third address form test option
We'll actually have 3 variants of the address page running
at the same time for this test as the mobile banner will
use the legacy form, and the desktop test will test 2 variants
of the new form.

Ticket: https://phabricator.wikimedia.org/T366576

--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -57,7 +57,8 @@ campaigns:
       end: "2024-12-31"
       buckets:
         - "legacy"
-        - "test_02"
+        - "test_02_a"
+        - "test_02_b"
       default_bucket: "legacy"
       url_key: ap
       active: true
