Migrate from Drone CI to Woodpecker CI
Ticket: https://phabricator.wikimedia.org/T369019

--- a/.woodpecker/ci.yml
+++ b/.woodpecker/ci.yml
@@ -1,16 +1,25 @@
-kind: pipeline
-type: docker
-name: default
+clone:
+  git:
+    image: woodpeckerci/plugin-git
+    settings:
+      # "partial: false" and depth will copy several commits from the source repo,
+      # enabling history checks for the ocular tool
+      # "lfs: false" disables downloading resources from LFS, which we don't use
+      partial: false
+      depth: 10
+      lfs: false
+
 steps:
   - name: build
+    when:
+      -   event: [ push, pull_request, cron, manual ]
     image: registry.gitlab.com/fun-tech/fundraising-frontend-docker:latest
     environment:
       COMPOSER_CACHE_DIR: /composer_cache
       GITHUB_TOKEN:
         from_secret: github_token
     volumes:
-      - name: cache
-        path: /composer_cache
+      - /tmp/woodpeckerci/cache:/composer_cache
     commands:
       # Environment setup
       - echo -e "machine github.com\n  login $GITHUB_TOKEN" > ~/.netrc
@@ -37,8 +46,3 @@ steps:
       event:
         - push
         - pull_request
-
-volumes:
-  - name: cache
-    host:
-      path: /tmp/drone/cache
