Add address field order A/B test
We will be testing a street autocomplete field soon
which requires the order of the address fields to be
changed. This adds an A/B test for it.

Ticket: https://phabricator.wikimedia.org/T369152

--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -16,3 +16,8 @@ campaigns:
     start: "2023-01-01"
     default_bucket: "legacy"
     active: true
+
+  address_field_order:
+    start: "2024-01-01"
+    default_bucket: "legacy"
+    active: true
